--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <h1>Great Mexican Food Ideas</h1>
-    <img src="/home/casey/repos/odin-recipes/5-mexican-food-collage-ezume-images.jpg" alt="Mexican Food Collage">
+    <img class="imgstandard" src="5-mexican-food-collage-ezume-images.jpg" alt="Mexican Food Collage">
 
     <p>Quick and easy <strong>Mexican Food</strong> recipes to make dinner a breeze!</p>
 
     <ul>
-        <li><a href="/home/casey/repos/odin-recipes/chknench.html">Chicken Enchiladas</a></li>
-        <li><a href="/home/casey/repos/odin-recipes/streettaco.html">Mexican Street Tacos</a></li>
-        <li><a href="/home/casey/repos/odin-recipes/nachos.html">Over The Top Nachos</a></li>
+        <li><a href="chknench.html">Chicken Enchiladas</a></li>
+        <li><a href="streettaco.html">Mexican Street Tacos</a></li>
+        <li><a href="nachos.html">Over The Top Nachos</a></li>
     </ul>
     
 </body>
