--- a/chknench.html
+++ b/chknench.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chicken Enchiladas</h1>
-    <img src="/home/casey/repos/odin-recipes/shredded-chicken-enchiladas-2.jpg" alt="Chicken Enchilada Plate">
+    <img class="imgstandard" src="shredded-chicken-enchiladas-2.jpg" alt="Chicken Enchilada Plate">
 
     <p><strong><em>Delicious and quick chicken enchiladas that the family will love!</em></strong></p>
 
@@ -34,9 +34,9 @@
         <p>Be sure to try these other delicious <em>recipes!</em></p>
 
         <ul>
-            <li><a href="/home/casey/repos/odin-recipes/index.html">Home</a></li>
-            <li><a href="/home/casey/repos/odin-recipes/streettaco.html">Mexican Style Street Tacos</a></li>
-            <li><a href="/home/casey/repos/odin-recipes/nachos.html">Over The Top Nachos</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="streettaco.html">Mexican Style Street Tacos</a></li>
+            <li><a href="nachos.html">Over The Top Nachos</a></li>
         </ul>
 
         
