--- a/nachos.html
+++ b/nachos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Delicious Over The Top Nachos!</h1>
-    <img src="/home/casey/repos/odin-recipes/Sweet-Pork-Nachos-2-1136x1536.jpg" alt="Over The Top Nachos">
+    <img class="imgstandard" src="Sweet-Pork-Nachos-2-1136x1536.jpg" alt="Over The Top Nachos">
 
     <p>These Nachos Will Have Your Guest Begging For More!</p>
 
@@ -32,9 +32,9 @@
     <p>Be sure to try these other delicious <em>recipes!</em></p>
 
     <ul>
-        <li><a href="/home/casey/repos/odin-recipes/index.html">Home</a></li>
-        <li><a href="/home/casey/repos/odin-recipes/streettaco.html">Mexican Style Street Tacos</a></li>
-        <li><a href="/home/casey/repos/odin-recipes/chknench.html">Chicken Enchiladas</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="streettaco.html">Mexican Style Street Tacos</a></li>
+        <li><a href="chknench.html">Chicken Enchiladas</a></li>
     </ul>
 
 
