--- a/streettaco.html
+++ b/streettaco.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Real Mexican Style Street Tacos!</h1>
 
-    <img src="/home/casey/repos/odin-recipes/Mexican-Street-Tacos-08.jpg" alt="Mexican Street Tacos">
+    <img class="imgstandard" src="Mexican-Street-Tacos-08.jpg" alt="Mexican Street Tacos">
 
     <p>These Mexican Street Tacos are the perfect dinner in a hurry and great for parties!</p>
 
@@ -36,9 +36,9 @@
         <p>Be sure to try these other delicious <em>recipes!</em></p>
 
         <ul>
-            <li><a href="/home/casey/repos/odin-recipes/index.html">Home</a></li>
-            <li><a href="/home/casey/repos/odin-recipes/chknench.html">Chicken Enchiladas</a></li>
-            <li><a href="/home/casey/repos/odin-recipes/nachos.html">Over The Top Nachos</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="chknench.html">Chicken Enchiladas</a></li>
+            <li><a href="nachos.html">Over The Top Nachos</a></li>
         </ul>
 
 
