--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Home</title>
+    <link rel="stylesheet" href="stlyles.css">
 </head>
 <body>
     <h1>Great Mexican Food Ideas</h1>
